--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,6 +8,7 @@
       <th>Name</th>
       <th>Photo</th>
       <th>Precio Mínimo</th>
+      <th>Estado</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,8 +17,9 @@
     <% @products.each do |product| %>
       <tr>
         <td><%= product.name %></td>
-        <td><%= product.photo %></td>
+        <td> <%= image_tag (product.photo), size:"200" %> </td>
         <td><%= product.min_price %></td>
+        <td><%= product.state_id %></td>
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
