--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,36 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<div class="container">
+  
+<h1>De Remate</h1>
+<p>Apúrate !!! </p>
+</div>
+
+<div class="container">
+  
+   <div class="row vista-general-productos">
+    
+
+      <% @products.each do |product| %>
+      <% unless product.close?%>
+      <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+           <%= image_tag (product.photo), size:"200", class: "img-rounded" %>
+          <div class="caption">
+            <h3><%= product.name %></h3>
+            <p> Precio: 
+              <% if product.pujas.empty? %>
+                  <%= product.min_price %>
+              <% else %>
+                <%= product.pujas.last.price %> 
+              <% end %>
+            </p>
+            <p> Estado: <%= product.state.name %></p>
+
+            <p><a href="<%=  new_product_puja_path(product.id) %>" class="btn btn-primary" role="button" data-remote="true">Hacer una oferta</a> </p>
+          
+          </div>
+        </div>
+      </div>
+       <% end %>
+    <% end %>
+  </div> 
+</div>
